--- a/custom.org
+++ b/custom.org
@@ -1097,26 +1097,15 @@ function.
 
 * go-mode
 
-  Install [[https://github.com/golang/lint][golint]]:
+  Install commands:
 
   #+BEGIN_SRC sh
-     go get github.com/golang/lint/golint
-  #+END_SRC
-
-  Install Go Guru:
-
-  #+BEGIN_SRC sh
-    go get golang.org/x/tools/cmd/guru
-  #+END_SRC
-
-  Install =goimports=:
-
-  #+BEGIN_SRC sh
-    go get golang.org/x/tools/cmd/goimports
-  #+END_SRC
-
-  #+BEGIN_SRC sh
-    go get golang.org/x/tools/cmd/gorename
+    go get \
+       github.com/golang/lint/golint \
+       github.com/rogpeppe/godef \
+       golang.org/x/tools/cmd/goimports \
+       golang.org/x/tools/cmd/gorename \
+       golang.org/x/tools/cmd/guru
   #+END_SRC
 
   #+BEGIN_SRC emacs-lisp
