--- a/custom.org
+++ b/custom.org
@@ -1102,6 +1102,7 @@ function.
   #+BEGIN_SRC sh
     go get \
        github.com/golang/lint/golint \
+       github.com/mdempsky/gocode \
        github.com/rogpeppe/godef \
        golang.org/x/tools/cmd/goimports \
        golang.org/x/tools/cmd/gorename \
