No proportional fonts for YAML

--- a/custom.org
+++ b/custom.org
@@ -2441,6 +2441,7 @@ function.
     (defun k20e/yaml-mode-hook ()
       (setq fill-column 118)
       (ansible-doc-mode)
+      (buffer-face-mode)
       (define-key yaml-mode-map (kbd "C-m") 'newline-and-indent)
       (flycheck-mode 1)
       (flycheck-yamllint-setup)
