--- a/custom.org
+++ b/custom.org
@@ -1084,10 +1084,11 @@ function.
   Install commands:
 
   #+BEGIN_SRC sh
-    go get \
-       github.com/golang/lint/golint \
+    go get -u \
+       github.com/kisielk/errcheck \
        github.com/mdempsky/gocode \
        github.com/rogpeppe/godef \
+       golang.org/x/lint/golint \
        golang.org/x/tools/cmd/goimports \
        golang.org/x/tools/cmd/gorename \
        golang.org/x/tools/cmd/guru
@@ -1104,10 +1105,17 @@ function.
     (require 'go-rename)
 
     (defun k20e/go-mode-hook ()
-      (let ((gopath "${HOME}/go")
-            (d "src/github.com/golang/lint/misc/emacs")
+      (let ((gopath (string-trim (shell-command-to-string (string-join `(,(executable-find "go") "env" "GOPATH") " "))))
+            (goroot (string-trim (shell-command-to-string (string-join `(,(executable-find "go") "env" "GOROOT") " "))))
+            (d "src/golang.org/x/lint/misc/emacs")
             (f "golint.el"))
+        (setenv "GOPATH" gopath)
+        (setenv "GOROOT" goroot)
         (require 'golint (expand-file-name f (expand-file-name d gopath))))
+
+
+      (setup-compose-predicate)
+
 
       (go-eldoc-setup)
       (go-guru-hl-identifier-mode)
@@ -1124,12 +1132,14 @@ function.
       (company-mode)
 
       (add-hook 'before-save-hook 'gofmt-before-save))
+
     (add-hook 'go-mode-hook 'k20e/go-mode-hook)
 
     ;;; Make identifiers stick out a bit more.
     (set-face-attribute 'go-guru-hl-identifier-face nil :underline t)
 
     (setq-default company-show-numbers t
+                  godoc-reuse-buffer t
                   gofmt-args nil
                   gofmt-command "goimports")
 
@@ -1139,11 +1149,17 @@ function.
     ;;; Guru is mapped to C-c C-o because it used to be called Oracle but
     ;;; that hurts my brain.
     (define-key go-mode-map (kbd "C-M-SPC") 'go-guru-expand-region)
+    (define-key go-mode-map (kbd "C-c C-?") 'godoc-at-point)
     (define-key go-mode-map (kbd "C-c C-d") 'go-guru-describe)
     (define-key go-mode-map (kbd "C-c C-g") 'go-guru-map)
     (define-key go-mode-map (kbd "C-c C-j") 'go-guru-definition)
     (define-key go-mode-map (kbd "C-c C-r") 'go-rename)
     (define-key go-mode-map (kbd "C-c C-t") 'k20e/toggle-test-buffer)
+    (define-key go-mode-map (kbd "M-q") 'gofmt)
+
+    ;;; I can't rewire my brain to navigate the overlay w/ `M-n' ond `M-p'
+    (define-key company-active-map (kbd "C-n") 'company-select-next)
+    (define-key company-active-map (kbd "C-p") 'company-select-previous)
   #+END_SRC
 
 ** [0/3] =TODO=
