--- a/custom.org
+++ b/custom.org
@@ -1099,42 +1099,22 @@ function.
   Install commands:
 
   #+BEGIN_SRC sh
-    go get -u \
-       github.com/kisielk/errcheck \
-       github.com/mdempsky/gocode \
-       github.com/rogpeppe/godef \
-       golang.org/x/lint/golint \
-       golang.org/x/tools/cmd/goimports \
-       golang.org/x/tools/cmd/gorename \
-       golang.org/x/tools/cmd/guru
+    pushd "${TMPDIR}" && \
+        GO111MODULE=on go get golang.org/x/tools/gopls@latest; \
+        popd
   #+END_SRC
 
   #+BEGIN_SRC emacs-lisp
-    (require 'company)
-    (require 'company-go)
-    (require 'face-remap)
-    (require 'flycheck)
-    (require 'go-eldoc)
-    (require 'go-guru)
     (require 'go-mode)
-    (require 'go-rename)
+    (require 'lsp-mode)
 
     (defun k20e/go-mode-hook ()
       (let ((gopath (string-trim (shell-command-to-string (string-join `(,(executable-find "go") "env" "GOPATH") " "))))
-            (goroot (string-trim (shell-command-to-string (string-join `(,(executable-find "go") "env" "GOROOT") " "))))
-            (d "src/golang.org/x/lint/misc/emacs")
-            (f "golint.el"))
+            (goroot (string-trim (shell-command-to-string (string-join `(,(executable-find "go") "env" "GOROOT") " ")))))
         (setenv "GOPATH" gopath)
-        (setenv "GOROOT" goroot)
-        (require 'golint (expand-file-name f (expand-file-name d gopath))))
-
+        (setenv "GOROOT" goroot))
 
       (setup-compose-predicate)
-
-
-      (go-eldoc-setup)
-      (go-guru-hl-identifier-mode)
-      (flycheck-mode 1)
 
       (set (make-local-variable 'compile-command)
            "go build -v ")
@@ -1143,38 +1123,17 @@ function.
             indent-tabs-mode t
             tab-width 4)
 
-      (set (make-local-variable 'company-backends) '(company-go))
-      (company-mode)
+      (add-hook 'before-save-hook 'lsp-format-buffer)
+      (add-hook 'before-save-hook 'lsp-organize-imports)
 
-      (add-hook 'before-save-hook 'gofmt-before-save))
+      (set-face-attribute 'lsp-face-highlight-textual nil :underline t)
+
+      (lsp-deferred))
 
     (add-hook 'go-mode-hook 'k20e/go-mode-hook)
 
-    ;;; Make identifiers stick out a bit more.
-    (set-face-attribute 'go-guru-hl-identifier-face nil :underline t)
-
-    (setq-default company-show-numbers t
-                  godoc-reuse-buffer t
-                  gofmt-args nil
-                  gofmt-command "goimports")
-
-    ;;; Not help!
-    (define-key company-active-map (kbd "C-h") 'delete-backward-char)
-
-    ;;; Guru is mapped to C-c C-o because it used to be called Oracle but
-    ;;; that hurts my brain.
-    (define-key go-mode-map (kbd "C-M-SPC") 'go-guru-expand-region)
-    (define-key go-mode-map (kbd "C-c C-?") 'godoc-at-point)
-    (define-key go-mode-map (kbd "C-c C-d") 'go-guru-describe)
-    (define-key go-mode-map (kbd "C-c C-g") 'go-guru-map)
-    (define-key go-mode-map (kbd "C-c C-j") 'go-guru-definition)
-    (define-key go-mode-map (kbd "C-c C-r") 'go-rename)
     (define-key go-mode-map (kbd "C-c C-t") 'k20e/toggle-test-buffer)
-    (define-key go-mode-map (kbd "M-q") 'gofmt)
-
-    ;;; I can't rewire my brain to navigate the overlay w/ `M-n' ond `M-p'
-    (define-key company-active-map (kbd "C-n") 'company-select-next)
-    (define-key company-active-map (kbd "C-p") 'company-select-previous)
+    (define-key go-mode-map (kbd "M-q") 'lsp-format-buffer)
   #+END_SRC
 
 ** [0/3] =TODO=
