Update find file in project patterns

--- a/custom.org
+++ b/custom.org
@@ -846,24 +846,15 @@ function.
     (setq-default ffip-limit 8192
                   ffip-find-options "-not -regex \".*/build.*\"" ; TODO ignore .tox
                   ffip-full-paths t
-                  ffip-patterns (list "*.clj"
-                                      "*.conf"
-                                      "*.cron"
-                                      "*.css"
-                                      "*.el"
+                  ffip-patterns (list "*.el"
                                       "*.html"
-                                      "*.j2"
                                       "*.js"
                                       "*.json"
-                                      "*.kt"
-                                      "*.mk"
+                                      "*.go"
                                       "*.md"
                                       "*.org"
                                       "*.py"
-                                      "*.rb"
-                                      "*.rst"
                                       "*.sh"
-                                      "*.soy"
                                       "*.txt"
                                       "*.yaml"
                                       "*.yml"
