Rebind counsel-ag-project to counsel-rg

--- a/custom.org
+++ b/custom.org
@@ -640,8 +640,6 @@ function.
       (counsel-ag initial-input (condition-case err
                                     (vc-root-dir)
                                   (error default-directory))))
-
-    (global-set-key (kbd "C-x C-a") 'k20e/counsel-ag-project)
   #+END_SRC
 
 * auto-fill
@@ -759,6 +757,7 @@ function.
 
     (global-set-key (kbd "M-x") 'counsel-M-x)
 
+    (global-set-key (kbd "C-x C-a") 'counsel-rg)
     (global-set-key (kbd "C-x C-f") 'counsel-find-file)
     (global-set-key (kbd "<f1> f") 'counsel-describe-function)
     (global-set-key (kbd "<f1> v") 'counsel-describe-variable)
