--- a/custom.org
+++ b/custom.org
@@ -642,7 +642,7 @@ function.
   #+BEGIN_SRC emacs-lisp
     (require 'avy)
 
-    (global-set-key (kbd "H-g") 'avy-goto-char-timer)
+    (global-set-key (kbd "s-g") 'avy-goto-char-timer)
 
     (setq-default
      avy-keys '(?a ?o ?e ?u ?i ?d ?h ?t ?n)
