Update global key bindings

--- a/custom.org
+++ b/custom.org
@@ -678,10 +678,10 @@ function.
   #+BEGIN_SRC emacs-lisp
     (require 'buffer-move)
 
-    (global-set-key (kbd "<H-S-up>") 'buf-move-up)
-    (global-set-key (kbd "<H-S-down>") 'buf-move-down)
-    (global-set-key (kbd "<H-S-left>") 'buf-move-left)
-    (global-set-key (kbd "<H-S-right>") 'buf-move-right)
+    (global-set-key (kbd "<M-S-up>") 'buf-move-up)
+    (global-set-key (kbd "<M-S-down>") 'buf-move-down)
+    (global-set-key (kbd "<M-S-left>") 'buf-move-left)
+    (global-set-key (kbd "<M-S-right>") 'buf-move-right)
   #+END_SRC
 
 * C
